--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@icons-pack/react-simple-icons": "^12.7.0",
+    "@radix-ui/themes": "^3.2.1",
     "@tailwindcss/vite": "^4.1.5",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.507.0",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind": "^4.0.0"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.3",
+    "tailwind": "^4.0.0",
+    "tw-animate-css": "^1.2.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
