--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
     "tailwind": "^4.0.0",
+    "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.9"
   },
   "devDependencies": {
